--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container mt-5">
 
-    <img src="\profile.jpg" alt="me" width="300">
+    <img src="profile.jpg" alt="me" width="300">
 
 
     
